cmake_minimum_required(VERSION 3.26)
project(ProgDas_c_ C)

set(CMAKE_C_STANDARD 17)

add_executable(ProgDas_c_
        module3_codelab1.c
        module3_kegiatan1.c
        module3_codelab2.c
        module3_codelab1_new.c
        module3_codelab1_new_method2.c
        module3_codelab1_new_method3.c
)
